chore: revamp package
- Deprecated the old package.
- Added FileTransport for log files streaming.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,10 +6,13 @@
     "target": "ESNext",
     "module": "ESNext",
     "outDir": "./dist",
-    "moduleResolution": "Bundler"
+    "moduleResolution": "Bundler",
+    "types": [
+      "vitest/globals"
+    ],
+    "verbatimModuleSyntax": true
   },
   "exclude": [
-    "node_modules",
     "dist"
   ]
 }
