--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "@control.systems/logger",
-  "version": "1.0.5",
+  "name": "traceflow",
+  "version": "1.0.0",
+  "description": "A lightweight, customizable logging library for TypeScript applications that enhances logging for log-heavy apps like backends.",
   "license": "CC0-1.0",
   "type": "module",
   "exports": {
@@ -15,27 +16,30 @@
     "dist"
   ],
   "scripts": {
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:watch": "vitest watch",
     "build": "unbuild",
     "build:docs": "typedoc",
     "format": "prettier --write --cache \"src/**/*.ts\"",
     "typecheck": "tsc --noEmit"
   },
-  "dependencies": {
-    "fecha": "4.2.3"
-  },
   "devDependencies": {
-    "@types/node": "^20.14.9",
-    "prettier": "^3.3.2",
-    "typedoc": "^0.26.4",
-    "typedoc-material-theme": "^1.1.0",
-    "typescript": "^5.5.2",
-    "unbuild": "^2.0.0"
+    "@types/node": "^22.10.2",
+    "@vitest/coverage-v8": "2.1.8",
+    "mitata": "^1.0.21",
+    "prettier": "^3.4.2",
+    "typedoc": "^0.27.5",
+    "typedoc-material-theme": "^1.2.0",
+    "typescript": "^5.7.2",
+    "unbuild": "^3.0.1",
+    "vitest": "^2.1.8"
   },
-  "packageManager": "pnpm@8.15.8",
   "engines": {
     "node": ">=18.16.1"
   },
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "packageManager": "pnpm@9.15.0+sha512.76e2379760a4328ec4415815bcd6628dee727af3779aaa4c914e3944156c4299921a89f976381ee107d41f12cfa4b66681ca9c718f0668fa0831ed4c6d8ba56c"
 }
